truncated the search button to fix smaller screen issue, removed admin off the profile if satement to check if they should show or not

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
+/*---------------------------------------------------------- overflow */
+.overflow-hidden {
+    overflow: hidden;
+}
 /*---------------------------------------------------------- Font */
 
 .font-size-large {
